--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,27 @@
 body {
   @apply bg-zinc-100 text-zinc-900 dark:bg-zinc-900 dark:text-zinc-100;
 }
+
+.text-h-1 {
+  @apply font-sans font-medium text-6xl text-zinc-900;
+}
+
+.text-h-2 {
+  @apply font-sans font-normal text-3xl text-zinc-600;
+}
+
+.text-body {
+  @apply font-body font-normal text-lg text-zinc-900;
+}
+
+.text-navigation {
+  @apply font-sans text-xl font-semibold ml-8 text-zinc-900;
+}
+
+.text-sub-text {
+  @apply font-body font-normal text-sm text-zinc-600;
+}
+
+.text-sub-link {
+  @apply font-body font-medium text-lg text-zinc-900;
+}
