--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,29 +20,29 @@ body {
 }
 
 .text-h-1 {
-  @apply font-sans font-medium text-6xl text-zinc-900;
+  @apply font-sans font-medium text-6xl text-zinc-900 dark:text-zinc-100;
 }
 
 .text-h-2 {
-  @apply font-sans font-normal text-3xl text-zinc-600;
+  @apply font-sans font-normal text-3xl text-zinc-600 dark:text-zinc-400;
 }
 
 .text-title {
-  @apply font-body font-bold text-lg text-zinc-900;
+  @apply font-body font-bold text-lg text-zinc-900 dark:text-zinc-100;
 }
 
 .text-body {
-  @apply font-body font-medium text-lg text-zinc-900;
+  @apply font-body font-medium text-lg text-zinc-900 dark:text-zinc-100;
 }
 
 .text-navigation {
-  @apply font-sans text-xl font-semibold ml-8 text-zinc-900 hover:text-indigo-700 transition-colors;
+  @apply font-sans text-xl font-semibold ml-8 text-zinc-900 dark:text-zinc-100 hover:text-indigo-700 dark:hover:text-indigo-700 transition-colors;
 }
 
 .text-sub-text {
-  @apply font-body font-normal text-sm text-zinc-600;
+  @apply font-body font-normal text-sm text-zinc-600 dark:text-zinc-400;
 }
 
 .text-sub-link {
-  @apply font-body font-medium text-lg text-zinc-900 underline underline-offset-4 hover:text-indigo-700 transition-colors;
+  @apply font-body font-medium text-lg text-zinc-900 dark:text-zinc-100 underline underline-offset-4 hover:text-indigo-700 dark:hover:text-indigo-700 transition-colors;
 }
