--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,15 +16,15 @@ body {
 }
 
 .default-center {
-  @apply max-w-7xl w-full mx-auto;
+  @apply max-w-[90%] xl:max-w-7xl w-full mx-auto;
 }
 
 .text-h-1 {
-  @apply font-sans font-medium text-6xl text-zinc-900 dark:text-zinc-100;
+  @apply font-sans font-medium text-5xl xl:text-6xl text-zinc-900 dark:text-zinc-100;
 }
 
 .text-h-2 {
-  @apply font-sans font-normal text-3xl text-zinc-600 dark:text-zinc-400;
+  @apply font-sans font-normal text-2xl xl:text-3xl text-zinc-600 dark:text-zinc-400;
 }
 
 .text-title {
